# matrix-dust

./: CHANGELOG.md  README.md  cliff.toml  index.html  package.json  tsconfig.json  vite.config.ts
.agents/skills/tauri-release/: SKILL.md
.agents/workflows/: release.md
.github/workflows/: release.yml
Casks/: matrix-dust.rb  window-tuner.rb
src/: App.tsx  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  lib.rs  main.rs  shortcuts.rs  tray.rs  window_manager.rs
src/components/: AccessibilityPrompt.tsx  Preferences.tsx  ShortcutReference.tsx  WelcomeTutorial.tsx
