[package]
name = "matrix-dust"
version = "0.1.4"
description = "Window layout adjustment via global shortcuts"
authors = ["you"]
edition = "2021"

[lib]
name = "window_tuner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
core-foundation = "0.10"
core-graphics = "0.24"
